# Isochrone

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  PLAN.md  README.md  eslint.config.cjs  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
data_pipeline/: fetch-data.sh  region-data.py  regions.json
data_pipeline/output/: cologne-district-boundaries-canvas.json  cologne-graph-summary.json  graph-binary-validation-summary.json  london-district-boundaries-canvas.json  london-graph-summary.json  luxembourg-country-district-boundaries-canvas.json  luxembourg-country-graph-summary.json  osm-highway-survey.json  projected-node-summary.json  rome-district-boundaries-canvas.json  rome-graph-summary.json  routing-benchmark-post-precompute.json  simplified-adjacency-summary.json  walkable-extract-summary.json
data_pipeline/scripts/: export_graph_binary.py  read_graph_bin.py  simplify_boundary_json.py  simplify_graph.py  survey_highways_overpass.py  validate_binary_output.py
data_pipeline/tests/: test_adjacency.py  test_binary_reader.py  test_binary_validation.py  test_boundary_canvas.py  test_fetch_queries.py  test_github_pages_workflow.py  test_overpass_survey.py  test_region_pipeline.py  test_simplify.py  (+2 more)
docs/: agentic-coding-guidelines.md  berlin_district_boundaries_query.ql  berlin_overpass_routing_query.ql  graph-binary-schema-v2.md  osm-highway-survey.md  overpass_boundary_query.sh  overpass_routing_query.sh  region-data-pipeline.md  wasm-routing-kernel.md
web/: index.html
(+47 files in other folders)
